--- a/style.css
+++ b/style.css
@@ -259,6 +259,7 @@ margin-top: 8px;
   select{
     padding: 8px;
     max-width: 75px;
+    cursor: pointer;
     border: 1px solid #D9D9D9;
     border-radius: 5px;
     width: auto;
@@ -317,13 +318,20 @@ margin-top: 8px;
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 425px) {
   .main-card {
     width: 100%;
     max-width: 100%;
   }
+  .container {
+  overflow: auto;
+  }
   .card-box {
     padding: 20px;
     gap: 20px;
+  }
+  .offer-container{
+    padding: 1px 3px;
+
   }
 }
