--- a/style.css
+++ b/style.css
@@ -21,6 +21,58 @@ input{
 
 
 
+.radio {
+  display: block;
+  cursor: pointer;
+  user-select: none;
+  text-align: left;
+}
+
+.radio + .radio {
+  margin-top: 12px;
+}
+
+.radio input {
+  display: none;
+}
+
+.radio input + span {
+  display: inline-block;
+  position: relative;
+}
+
+.radio input + span::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #e62f2f;
+  background: #fff;
+}
+
+.radio input + span::after {
+  content: '';
+  display: block;
+  width: 10px;
+  height: 10px;
+  background: #222;
+  position: absolute;
+  border-radius: 50%;
+  top: 3px;
+  left: 3px;
+  opacity: 0;
+  transform: scale(0, 0);
+  transition: all .2s cubic-bezier(0.64, 0.57, 0.67, 1.53);
+}
+
+.radio input:checked + span::after {
+  opacity: 1;
+  transform: scale(1, 1);
+}
 
 
 .offer-container{
@@ -262,9 +314,10 @@ margin-top: 8px;
     cursor: pointer;
     border: 1px solid #D9D9D9;
     border-radius: 5px;
+    
     width: auto;
     color:#333;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 500;
   }
     .btn{
